--- a/public/settings.html
+++ b/public/settings.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<!DOCTYPE HTML>
+<!--[if lt IE 9 ]>    <html class="ie"> <![endif]-->
+<!--[if gt IE 8]><!--><html><!--<![endif]-->
   <head>
     <title>CM</title>
     <meta content="text/html; charset=utf-8" />
