Added pref switcher in form viewer.

--- a/public/subscription-form.html
+++ b/public/subscription-form.html
@@ -28,6 +28,10 @@
   </head>
   <body>
   
+    <ul class="nav">
+      <li class="selected"><a>What it looks like to others</a></li><!-- No whitespace--><li><a>Form settings</a></li>
+    </ul>
+  
     <div class="success">
       <h2>Thanks. You're signed up!</h2>
       <p><!-- If confirmation emails are on: -->We've just sent you a quick email where you can confirm your subscription.<!-- else --> You'll receive updates and newsletters straight to your inbox. <!-- end if --> You can always unsubscribe instantly from a link in any email you receive.</p> 
