--- a/public/app.html
+++ b/public/app.html
@@ -20,14 +20,14 @@
   </article>
   <section class="grey">
     <img/>
-    <p>Add a Campaign Monitor form to your or your client&rsquo;s Facebook Page with this app. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur.</p>
+    <p>Facebook presence is becoming more important for businesses. Add a sign up form to your Page with this app to make it easier for your customers to subscribe to your Campaign Monitor emails. We'll set it all up for you; and you can even add subscriber custom fields.</p>
   
   </section>
   <!-- If they've set up a page and not added it, show step two. -->
   <article class="step two">
     <h2 class="grey">How to install</h2>
     <img src="img/two.png"/>
-    <p><strong>Step two</strong>: Your subscription form for the page Jimmy&rsquo;s Pistachios is all set up. Now, add it as a tab to the page by clicking <strong>Add to My Page</strong>.</p>
+    <p><strong>Step two</strong>: Your form for the page Jimmy&rsquo;s Pistachios is all set up. Now, add it as a tab by clicking <strong>Add to My Page</strong>.</p>
   </article>
 
 </body>
