Updated arrows because Jesse is a jerk.

--- a/public/app.html
+++ b/public/app.html
@@ -15,18 +15,18 @@
   <!-- If they're new, show step one. -->
   <article class="step one">
     <h2 class="grey">How to install</h2>
-    <img src="img/one.png"/>
+    <img src="img/one-new.png"/>
     <p><strong>Step one</strong>: First, hook up a form to your Campaign Monitor account <br/>by clicking <strong>Go to App</strong> above.</p>
   </article>
   <section class="grey">
-    <img/>
+    <img src="img/intro.png"/>
     <p>Facebook presence is becoming more important for businesses. Add a sign up form to your Page with this app to make it easier for your customers to subscribe to your Campaign Monitor emails. We'll set it all up for you; and you can even add subscriber custom fields.</p>
   
   </section>
   <!-- If they've set up a page and not added it, show step two. -->
   <article class="step two">
     <h2 class="grey">How to install</h2>
-    <img src="img/two.png"/>
+    <img src="img/two-new.png"/>
     <p><strong>Step two</strong>: Your form for the page Jimmy&rsquo;s Pistachios is all set up. Now, add it as a tab by clicking <strong>Add to My Page</strong>.</p>
   </article>
 
